# nrf-softdevice

./: Cargo.toml  README.md  ci-stable.sh  ci.sh  gen.sh  rust-toolchain-nightly.toml  rust-toolchain-stable.toml  rust-toolchain.toml  test-build.sh
.cargo/: config
.github/workflows/: rust.yml
async-flash/: Cargo.toml
async-flash/src/: lib.rs  writer.rs
example/: Cargo.toml
example-rtic/: Cargo.toml
example-rtic/src/: main.rs
example/src/: example_common.rs  main.rs
examples/: Cargo.toml  build.rs  memory-nrf52832.x  memory-nrf52833.x  memory-nrf52840.x  memory.x  rust-toolchain.toml
examples/.cargo/: config  config.toml
examples/flash/: Cargo.toml
examples/flash/src/: main.rs
examples/src/: example_common.rs
nrf-softdevice/: Cargo.toml
nrf-softdevice-defmt-rtt/: Cargo.toml
nrf-softdevice-defmt-rtt/src/: channel.rs  lib.rs  lib2.rs
nrf-softdevice-gen/: Cargo.toml
nrf-softdevice-gen/src/: main.rs
nrf-softdevice-macro/: Cargo.toml
nrf-softdevice-macro/src/: lib.rs  security_mode.rs  uuid.rs
nrf-softdevice-mbr/: Cargo.toml
nrf-softdevice-mbr/src/: bindings.rs
nrf-softdevice-s112/: Cargo.toml
nrf-softdevice-s112/src/: bindings.rs
nrf-softdevice-s113/: Cargo.toml
nrf-softdevice-s113/src/: bindings.rs  lib.rs
nrf-softdevice-s122/: Cargo.toml
nrf-softdevice-s122/src/: bindings.rs
nrf-softdevice-s132/: Cargo.toml
nrf-softdevice-s132/src/: bindings.rs
nrf-softdevice-s140/: Cargo.toml
nrf-softdevice-s140/src/: bindings.rs
nrf-softdevice/src/: ble.rs  critical_section_impl.rs  error.rs  events.rs  flash.rs  fmt.rs  interrupt.rs  lib.rs  random.rs  raw_error.rs  softdevice.rs  temperature.rs
nrf-softdevice/src/ble/: advertisement_builder.rs  bond.rs  central.rs  common.rs  connection.rs  events.rs  gap.rs  gap_central.rs  gap_peripheral.rs  gatt_client.rs  gatt_server.rs  gatt_traits.rs  l2cap.rs  mod.rs  peripheral.rs  replies.rs  security.rs  tests.rs  types.rs  uuid.rs
nrf-softdevice/src/ble/advertisement_builder/: ad.rs  appearance.rs  flag.rs  service_uuid16.rs
nrf-softdevice/src/ble/gatt_server/: builder.rs  characteristic.rs
nrf-softdevice/src/util/: depanic.rs  drop_bomb.rs  macros.rs  mod.rs  on_drop.rs  portal.rs  signal.rs  waker_store.rs
softdevice/mbr/headers/: nrf_mbr.h
softdevice/s112/headers/: nrf_sd_def.h
softdevice/s113/headers/: nrf_sd_def.h
softdevice/s140/headers/: nrf_sd_def.h
