[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
name = "nrf-softdevice-examples"
version = "0.1.0"

[features]
default = [ "defmt-default" ]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
async-flash = { version = "0.1.0", path = "../async-flash" }
cortex-m        = { version = "0.6.3" }
cortex-m-rt = "0.6.12"
defmt = "0.1.0"
defmt-rtt = "0.1.0"
panic-probe = "0.1.0"
nrf52840-hal    = { version = "0.11.0" }
nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt-trace", "nrf52840", "s140", "ble-peripheral", "ble-central"] }
nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140" }
static-executor  = { version = "0.1.0", features=["defmt"]}
static-executor-cortex-m  = { version = "0.1.0" }
futures = { version = "0.3.5", default-features = false }
