[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2021"
name = "nrf-softdevice-examples"
version = "0.1.0"

[features]
default = [
    "ble-l2cap",
    "ble-gatt-server",
    "ble-gatt-client",
    "ble-sec",
]

ble-l2cap = ["nrf-softdevice/ble-l2cap"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
ble-sec = ["nrf-softdevice/ble-sec"]

nrf52832 = [
  "embassy-nrf/nrf52832",
  "nrf-softdevice/nrf52832",
  "nrf-softdevice/s132",
  "dep:nrf-softdevice-s132"
]
nrf52833 = [
  "embassy-nrf/nrf52833",
  "nrf-softdevice/nrf52833",
  "nrf-softdevice/s140",
  "dep:nrf-softdevice-s140"
]
nrf52840 = [
  "embassy-nrf/nrf52840",
  "nrf-softdevice/nrf52840",
  "nrf-softdevice/s140",
  "dep:nrf-softdevice-s140"
]

nrf52840-dk = ["nrf52840"]
nrf52832-dk = ["nrf52832"]
microbit-v2 = ["nrf52833"]

[dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]}
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"]}
embassy-sync = { version = "0.6.0" }
embassy-nrf = { version = "0.3.0", features = ["defmt", "gpiote", "time-driver-rtc1" ]}
cortex-m-rt = "0.7.3"
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features= ["print-defmt"] }
nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt", "ble-peripheral", "ble-central", "critical-section-impl"] }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
futures = { version = "0.3.29", default-features = false }
heapless = "0.8.0"
atomic-pool = "1.0.1"
static_cell = "2.0.0"

nrf-softdevice-s132 = { version = "0.1.1", path = "../nrf-softdevice-s132", optional = true }
nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140", optional = true }

[[bin]]
name = "ble_bas_peripheral"
required-features = ["ble-gatt-server"]

[[bin]]
name = "ble_bas_peripheral_notify"
required-features = ["ble-gatt-server"]

[[bin]]
name = "ble_bond_peripheral"
required-features = ["ble-gatt-server"]

[[bin]]
name = "ble_bas_central"
required-features = ["ble-gatt-client"]

[[bin]]
name = "ble_bond_central"
required-features = ["ble-gatt-client"]

[[bin]]
name = "ble_peripheral_onoff"
required-features = ["ble-gatt-server"]

[[bin]]
name = "ble_keyboard_peripheral_builder"
required-features = ["ble-gatt-server"]

[[bin]]
name = "flash"
required-features = []
