[package]
name = "nrf-softdevice-macro"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2021"

[dependencies]
syn = { version = "1.0.39", features = ["full", "extra-traits"] }
quote = "1.0.7"
darling = "0.10.2"
proc-macro2 = "1.0.18"
Inflector = "0.11.4"
uuid = "0.8.1"

[lib]
proc-macro = true
