[package]
name = "nrf-softdevice-macro"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
syn = { version = "1.0.39", features = ["full", "extra-traits"] }
quote = "1.0.7"
darling = "0.13.4"
proc-macro2 = "1.0.18"
Inflector = "0.11.4"
uuid = "1.2.2"

[lib]
proc-macro = true
