[package]
name = "nrf-softdevice-s112"
version = "0.1.2"
description = "Low-level bindings for the Nordic nRF SoftDevice S112"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
repository = "https://github.com/embassy-rs/nrf-softdevice"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["cortex-m", "nrf52", "nrf-softdevice", "bluetooth", "ble"]
license-file = "LICENSE-NORDIC"
edition = "2021"

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabi"]

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/nrf-softdevice/blob/nrf-softdevice-s112-v$VERSION/nrf-softdevice-s112/src/"
src_base_git = "https://github.com/embassy-rs/nrf-softdevice/blob/$COMMIT/nrf-softdevice-s112/src/"
target = "thumbv7em-none-eabi"
