[package]
name = "nrf-softdevice"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"

[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

nrf52805 = ["nrf52805-pac"]
nrf52810 = ["nrf52810-pac"]
nrf52811 = ["nrf52811-pac"]
nrf52820 = ["nrf52820-pac"]
nrf52832 = ["nrf52832-pac"]
nrf52833 = ["nrf52833-pac"]
nrf52840 = ["nrf52840-pac"]

s112 = ["nrf-softdevice-s112"]
s113 = ["nrf-softdevice-s113"]
s122 = ["nrf-softdevice-s122"]
s132 = ["nrf-softdevice-s132"]
s140 = ["nrf-softdevice-s140"]

ble-peripheral = []
ble-central = []
ble-l2cap = []
ble-gatt = []
ble-gatt-server = ["ble-gatt"]
ble-gatt-client = ["ble-gatt"]

critical-section-impl = ["critical-section/custom-impl"]

[dependencies]
defmt = { version = "0.2.0", optional = true }
log = { version = "0.4.11", optional = true }
critical-section = { version = "0.2.1" }

num_enum = { version = "0.5.1", default-features = false }
embassy = { version = "0.1.0" }
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
heapless = "0.7.1"
fixed = "1.5.0"

nrf52805-pac  = { version = "0.10.0", features = ["rt"], optional = true }
nrf52810-pac  = { version = "0.10.0", features = ["rt"], optional = true }
nrf52811-pac  = { version = "0.10.0", features = ["rt"], optional = true }
nrf52820-pac  = { version = "0.10.0", features = ["rt"], optional = true }
nrf52832-pac  = { version = "0.10.0", features = ["rt"], optional = true }
nrf52833-pac  = { version = "0.10.0", features = ["rt"], optional = true }
nrf52840-pac  = { version = "0.10.0", features = ["rt"], optional = true }

nrf-softdevice-s112 = { version = "0.1.1", path = "../nrf-softdevice-s112", optional = true }
nrf-softdevice-s113 = { version = "0.1.1", path = "../nrf-softdevice-s113", optional = true }
nrf-softdevice-s122 = { version = "0.1.1", path = "../nrf-softdevice-s122", optional = true }
nrf-softdevice-s132 = { version = "0.1.1", path = "../nrf-softdevice-s132", optional = true }
nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140", optional = true }

nrf-softdevice-macro = { version = "0.1.0", path = "../nrf-softdevice-macro" }

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]
features = ["nrf52840", "s140", "ble-central", "ble-peripheral", "ble-l2cap", "ble-gatt-server", "ble-gatt-client"]